@@ -10,5 +10,6 @@ AC_FUNC_VFORK
 AC_HAVE_FUNCS(getcwd getdtablesize)
 AC_CHECK_HEADERS(sys/select.h)
 AC_HEADER_CHECK(termios.h,AC_FUNC_CHECK(cfsetispeed,AC_DEFINE(POSIX_TERMIOS)))
+AC_CHECK_HEADERS(stdlib.h)
 V5_USE_SHARED_LIB
 V5_AC_OUTPUT_MAKEFILE
